--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,16 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+## Ask42
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+#### Setup
+
+To git clone and launch server:
+
+`git clone https://github.com/lguenier/ask42.git`
+
+Now, configure your database settings in `config/database.yml` file, and then
+
+`cd ask42 && bundle && rails s`
+
+#### About
+
+@TODO @lguenier 
